--- a/index.html
+++ b/index.html
@@ -5,10 +5,106 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bangladesh</title>
-    <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="./img/logo.png" type="image/x-icon">
+    <link rel="stylesheet" href="style.css" class="css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400&family=Quicksand:wght@300;400&display=swap" rel="stylesheet">
 </head>
 <body>
-    
+    <h1 class="title">PEOPLE'S REPUBLIC OF BANGLADESH</h1>
+    <section>
+        <div class="half-width">
+            <h2>Bangladesh</h2>
+            <p>Bangladesh, to the east of India on the Bay of Bengal, is a South Asian country marked by lush greenery
+                and many waterways. Its Padma (Ganges), Meghna and Jamuna rivers create fertile plains, and travel by
+                boat is common. On the southern coast, the Sundarbans, an enormous mangrove forest shared with Eastern
+                India, is home to the royal Bengal tiger. Bangladesh did not exist as an independent state until 1971. Willem van Schendel's state-of-the-art history navigates the extraordinary twists and turns that created modern Bangladesh through ecological disaster, colonialism, partition, a war of independence and cultural renewal.</p>
+                <p>Bangladesh officially known as the People's Republic of Bangladesh is an independent nation located in South Asia. It makes up the eastern and largest portion of the ethno-linguistic region of Bengal. It is situated at the zenith of the Bay of Bengal and is bordered by Myanmar and India, and separated from Bhutan and Nepal by the thin Siliguri Corridor.</p>
+                <a class="link-button" href="https://en.wikipedia.org/wiki/Bangladesh" target="_blank">MORE INFO</a>
+        </div>
+        <div class="half-width">
+            <img src="./img/map.png" alt="">
+        </div>
+    </section>
+    <section>
+        <div class="all-divisions">
+            <div class="divisions">
+                <div class="dhaka-img">
+                    <img src="./img/dhaka.jpg" alt="dhaka">
+                </div>
+                <h2>Dhaka</h2>
+                <p>Dhaka is the capital city of Bangladesh, in southern Asia. Set beside the Buriganga River, it’s at the center of national government, trade and culture. The 17th-century old city was the Mughal capital of Bengal, and many palaces and mosques remain. American architect Louis Khan’s National Parliament House complex typifies the huge, fast-growing modern metropolis.
+                </p>
+                <a class="link-button" target="_blank" href="https://en.wikipedia.org/wiki/Dhaka">MORE INFO</a>
+            </div>
+            <div class="divisions">
+                <div class="rajshahi-img">
+                    <img src="./img/Rajshahi.jpg" alt="rajshahi">
+                </div>
+                <h2>Rajshahi</h2>
+                <p>Rajshahi is a metropolitan city, and a major urban, commercial and educational centre of Bangladesh. It is also the administrative seat of eponymous division and district. Located on the north bank of the Padma River, near the Bangladesh-India border, the city has a population of over 763,952 residents.
+                </p>
+                <a class="link-button" href="https://en.wikipedia.org/wiki/Rajshahi" target="_blank">MORE INFO</a>
+            </div>
+            <div class="divisions">
+                <div class="chittagong-img">
+                    <img src="./img/chattagram.jpg" alt="chattagram">
+                </div>
+                <h2>Chattagram</h2>
+                <p>Chittagong is large port city on the southeastern coast of Bangladesh. The Ethnological Museum has exhibits about the many different ethnic tribes across the country. Zia Memorial Museum, inside the former Old Circuit House, displays items belonging to former president Ziaur Rahman, who was assassinated on the site in 1981. The landmark Chandanpura Mosque has many onion-shaped domes and brightly painted minarets.
+                </p>
+                <a class="link-button" href="https://en.wikipedia.org/wiki/Chittagong" target="_blank">MORE INFO</a>
+            </div>
+            <div class="divisions">
+                <div class="sylhet-img">
+                    <img src="./img/Sylhet.jpg" alt="sylhet">
+                </div>
+                <h2>Sylhet</h2>
+                <p>Sylhet is a city in eastern Bangladesh, on the Surma River. It’s known for its Sufi shrines, like the ornate tomb and mosque of 14th-century saint Hazrat Shah Jalal, now a major pilgrimage site near Dargah Gate. The tiny Museum of Rajas contains belongings of the local folk poet Hasan Raja. A 3-domed gateway stands at the 17th-century Shahi Eidgah, a huge open-air hilltop mosque built by Emperor Aurangzeb.
+                </p>
+                <a class="link-button" href="https://en.wikipedia.org/wiki/Sylhet" target="_blank">MORE INFO</a>
+            </div>
+            <!-- <div class="divisions">
+                <div class="braisal-img">
+                    <img src="./img/Barisal.jpg" alt="barisal">
+                </div>
+                <h2>Barisal</h2>
+                <p>Barisal, officially known as Barishal, is a major city that lies on the banks of the Kirtankhola river in south-central Bangladesh. It is the largest city and the administrative headquarter of both Barisal District and Barisal Division. It is one of the oldest municipalities and river ports of the country.
+                </p>
+                <a class="link-button" href="https://en.wikipedia.org/wiki/Barisal" target="_blank">MORE INFO</a>
+            </div>
+            <div class="divisions">
+                <div class="khulna-img">
+                    <img src="./img/khulna.jpg" alt="khulna">
+                </div>
+                <h2>Khulna</h2>
+                <p>Khulna is the third largest city in Bangladesh after Dhaka and Chittagong. It is the administrative territory of Khulna District and Khulna Division. Wikipedia
+                </p>
+                <a class="link-button" href="https://en.wikipedia.org/wiki/Khulna" target="_blank">MORE INFO</a>
+            </div>
+            <div class="divisions">
+                <div class="mymensingh-img">
+                    <img src="./img/Mymensingh.jpg" alt="mymensingh">
+                </div>
+                <h2>Mymensingh</h2>
+                <p>Mymensingh is the capital of the Bangladeshi division of the same name. Located on the bank of Brahmaputra River, about 120 km north from Dhaka, it is a major financial centre and educational hub of north-central Bangladesh. The city, constituted by the British East India Company on 1 May 1787.
+                </p>
+                <a class="link-button" href="https://en.wikipedia.org/wiki/Mymensingh" target="_blank">MORE INFO</a>
+            </div>
+            <div class="divisions">
+                <div class="rangpur-img">
+                    <img src="./img/Rangpur.jpg" alt="rangpur">
+                </div>
+                <h2>Rangpur</h2>
+                <p>Rangpur is one of the major cities in Bangladesh and Rangpur Division. Rangpur was declared a district headquarters on December 16, 1769, and established as a municipality in 1869, making it one of the oldest municipalities in Bangladesh.
+                </p>
+                <a class="link-button" href="https://en.wikipedia.org/wiki/Rangpur,_Bangladesh" target="_blank">MORE INFO</a>
+            </div>         -->
+        </div>
+    </section>
+    <footer>
+        <p>&copy; All Right Reserved. Developed by SUMON H. SHOHAN</p>
+    </footer>
 </body>
 </html>
