--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@
             <img src="./img/map.png" alt="">
         </div>
     </section>
+    <h1 class="title">DIVISIONS OF BANGLADESH</h1>
+    <hr>
     <section>
         <div class="all-divisions">
             <div class="divisions">
@@ -103,6 +105,7 @@
             </div>         -->
         </div>
     </section>
+    <hr>
     <footer>
         <p>&copy; All Right Reserved. Developed by SUMON H. SHOHAN</p>
     </footer>
