--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                 </p>
                 <a class="link-button" href="https://en.wikipedia.org/wiki/Sylhet" target="_blank">MORE INFO</a>
             </div>
-            <!-- <div class="divisions">
+            <div class="divisions">
                 <div class="braisal-img">
                     <img src="./img/Barisal.jpg" alt="barisal">
                 </div>
@@ -102,7 +102,7 @@
                 <p>Rangpur is one of the major cities in Bangladesh and Rangpur Division. Rangpur was declared a district headquarters on December 16, 1769, and established as a municipality in 1869, making it one of the oldest municipalities in Bangladesh.
                 </p>
                 <a class="link-button" href="https://en.wikipedia.org/wiki/Rangpur,_Bangladesh" target="_blank">MORE INFO</a>
-            </div>         -->
+            </div>        
         </div>
     </section>
     <hr>
